[package]
name = "tldr"
description = "TreeLDR Command Line Interface"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[workspace]
members = [
	"layouts",
	"generators/rust/treeldr-rs",
	"generators/rust/treeldr-rs-macros",
	"generators/rust/generator"
]
resolver = "2"

[workspace.package]
authors = ["Spruce Systems Inc."]
edition = "2021"
rust-version = "1.74.0"
version = "0.2.0"

[workspace.dependencies]
treeldr-layouts = { path = "layouts", version = "0.2.0" }
treeldr-macros = { path = "generators/rust/treeldr-rs-macros", version = "0.2.0" }
treeldr-gen-rust = { path = "generators/rust/generator", version = "0.2.0" }

log = "0.4"
educe = "0.4.23"
num-traits = "0.2"
num-bigint = "0.4"
num-rational = "0.4"
iref = "3.1.4"
static-iref = "3.0"
rdf-types = "0.22.4"
xsd-types = "0.9.2"
btree-range-map = { version = "0.7.2", features = ["serde"] }
langtag = "0.4.0"
thiserror = "1.0.50"
serde = "1.0.192"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
json-syntax = "0.12.3"
codespan-reporting = "0.11.1"

locspan = "0.8.2"
nquads-syntax = "0.19.0"

clap = "4.0"
stderrlog = "0.6"

syn = "2.0.29"
proc-macro2 = "1.0.66"
quote = "1.0.33"

[dependencies]
treeldr-layouts.workspace = true
clap = { workspace = true, features = ["derive"] }
stderrlog.workspace = true
nquads-syntax.workspace = true
json-syntax.workspace = true
codespan-reporting.workspace = true
thiserror.workspace = true
iref.workspace = true
rdf-types.workspace = true
locspan.workspace = true
utf8-decode = "1.0.1"