[package]
name = "treeldr-cli"
version = "0.1.0"
authors = ["Spruce Systems Inc."]
description = "Schema definition language."
edition = "2021"

[features]
default = ["json-schema", "json-ld-context"]
json-schema = [
	"treeldr-json-schema",
	"serde_json"
]
json-ld-context = [
	"treeldr-json-ld-context"
]

[dependencies]
treeldr = { path = "../core" }
treeldr-build = { path = "../build" }
treeldr-syntax = { path = "../syntax" }
iref = "2.1.2"
grdf = { version = "0.7.3", features = ["loc"] }
log = "0.4"
locspan = "0.3.2"
codespan-reporting = "0.11"
stderrlog = "0.5"
clap = { version = "3.0", features = ["derive"] }

# Extensions.
treeldr-json-schema = { path = "../json-schema", version = "0.1", optional = true }
serde_json = { version = "1.0.81", optional = true }
treeldr-json-ld-context = { path = "../json-ld-context", version = "0.1", optional = true }

[[bin]]
name = "treeldr"
path = "src/main.rs"