[package]
name = "treeldr"
description = "Schema definition language."
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
iref.workspace = true
static-iref.workspace = true
log.workspace = true
derivative.workspace = true
locspan = { workspace = true, features = ["reporting"] }
locspan-derive.workspace = true
codespan-reporting.workspace = true
rdf-types = { workspace = true, features = ["meta", "contextual"] }
xsd-types.workspace = true
grdf = { workspace = true, features = ["meta"] }
contextual.workspace = true
btree-range-map = { version = "0.5", features = ["ordered-float"] }
iref-enum = "2.1"
num = "0.4.0"
lazy_static = "1.4.0"
ordered-float = "3.0.0"
permutator = "0.4.3"