[package]
name = "treeldr"
description = "Schema definition language."
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
educe.workspace = true
num-rational.workspace = true
iref.workspace = true
rdf-types.workspace = true
grdf = { workspace = true, features = ["meta"] }
btree-range-map.workspace = true
serde.workspace = true