[package]
name = "treeldr-distiller"
description = "Data serializer and deserializer using TreeLDR layouts"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treeldr.workspace = true
iref.workspace = true
static-iref.workspace = true
rdf-types.workspace = true
xsd-types.workspace = true
grdf.workspace = true
num-rational.workspace = true
educe.workspace = true
thiserror.workspace = true

[dev-dependencies]
treeldr-build.workspace = true
rdf-types = { workspace = true, features = ["locspan"] }
locspan.workspace = true
nquads-syntax.workspace = true
serde_json = "1.0"