[package]
name = "treeldr-json-schema"
version = "0.1.0"
authors = ["Spruce Systems Inc."]
description = "Schema definition language."
edition = "2021"

[dependencies]
treeldr = { path = "../core", version = "0.1" }
log = "0.4"
iref = "2.0"
serde_json = "1.0"
clap = { version = "3.0", features = ["derive"] }
derivative = "2.2.0"