[package]
name = "treeldr-layouts"
description = "TreeLDR Layouts"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []

# CBOR extension.
cbor = []

# Implements conversion functions between `Value` and `serde_cbor::Value`.
serde_cbor = ["cbor", "dep:serde_cbor"]

[dependencies]
educe.workspace = true
num-traits.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
iref = { workspace = true, features = ["serde"] }
static-iref.workspace = true
rdf-types = { workspace = true, features = ["serde"] }
xsd-types.workspace = true
btree-range-map.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
locspan.workspace = true
serde_json = "1.0"
lazy_static = "1.4.0"

serde_cbor = { version = "0.11.2", optional = true }

[dev-dependencies]
nquads-syntax.workspace = true
serde_json.workspace = true
paste = "1.0"
