[package]
name = "treeldr-load"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["turtle"]
turtle = ["turtle-syntax"]
json-schema = ["treeldr-json-schema", "serde_json"]
json-ld-context = ["treeldr-json-ld-context"]
serde = ["dep:serde"]

[dependencies]
treeldr.workspace = true
treeldr-build.workspace = true
treeldr-syntax.workspace = true
iref.workspace = true
rdf-types.workspace = true
grdf = { workspace = true, features = ["meta"] }
log.workspace = true
locspan = { workspace = true, features = ["reporting"] }
codespan-reporting.workspace = true
thiserror.workspace = true
nquads-syntax.workspace = true
serde = { version = "1.0.154", features = ["derive"], optional = true }

# Extensions.
turtle-syntax = { version = "5.0.0", optional = true }
treeldr-json-schema = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
treeldr-json-ld-context = { workspace = true, optional = true }