[package]
name = "treeldr-load"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["turtle", "json-schema", "lexicon"]
turtle = ["turtle-syntax"]
json-schema = ["treeldr-json-schema", "json-syntax"]
json-ld-context = ["treeldr-json-ld-context"]
lexicon = ["treeldr-lexicon", "json-syntax"]

[dependencies]
treeldr.workspace = true
treeldr-build.workspace = true
treeldr-syntax.workspace = true
iref.workspace = true
rdf-types.workspace = true
grdf = { workspace = true, features = ["meta"] }
log.workspace = true
locspan = { workspace = true, features = ["reporting"] }
codespan-reporting.workspace = true
thiserror.workspace = true
nquads-syntax.workspace = true
serde = { version = "1.0.154", features = ["derive"], optional = true }

# Extensions.
turtle-syntax = { version = "5.0.4", optional = true }
treeldr-json-schema = { workspace = true, optional = true }
json-syntax = { workspace = true, features = ["serde"], optional = true }
treeldr-json-ld-context = { workspace = true, optional = true }
treeldr-lexicon = { workspace = true, optional = true }