[package]
name = "treeldr-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treeldr = { path = "../core" }
treeldr-build = { path = "../build" }
iref = "2.1.1"
locspan = "0.7.2"
locspan-derive = "0.4"
codespan-reporting = "0.11"
rdf-types = { version = "0.8.3", features = ["meta"] }
derivative = "2.2.0"
thiserror = "1.0.31"

[dev-dependencies]
static-iref = "2.0"
nquads-syntax = "0.5.0"
grdf = "0.10"