[package]
name = "treeldr-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treeldr = { path = "../core" }
treeldr-build = { path = "../build" }
iref = "2.2"
locspan = "0.7.11"
locspan-derive = "0.5"
codespan-reporting = "0.11"
rdf-types = { version = "0.12.2", features = ["meta"] }
derivative = "2.2.0"
thiserror = "1.0.31"
decoded-char = "0.1.1"

[dev-dependencies]
static-iref = "2.0"
nquads-syntax = "0.9"
grdf = "0.14"
contextual = "0.1.3"