[package]
name = "treeldr-syntax"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treeldr.workspace = true
treeldr-build.workspace = true
iref.workspace = true
locspan.workspace = true
locspan-derive.workspace = true
codespan-reporting.workspace = true
rdf-types = { workspace = true, features = ["meta"] }
derivative.workspace = true
thiserror.workspace = true
decoded-char.workspace = true

[dev-dependencies]
static-iref.workspace = true
contextual.workspace = true
grdf.workspace = true
nquads-syntax.workspace = true
env_logger.workspace = true
test-log.workspace = true
abnf = "0.13"
