[package]
name = "tldrc"
version = "0.1.0"
authors = ["Spruce Systems Inc."]
description = "TreeLDR compiler"
edition = "2021"
default-run = "tldrc"

[features]
default = ["json-schema", "json-ld-context"]
json-schema = [
	"treeldr-json-schema"
]
json-ld-context = [
	"treeldr-json-ld-context"
]

[dependencies]
treeldr = { path = "../core" }
treeldr-syntax = { path = "../syntax" }
iref = "2.0"
grdf = { version = "0.6.1", features = ["loc"] }
log = "0.4"
locspan = "*"
codespan-reporting = "0.11"
stderrlog = "0.5"
clap = { version = "3.0", features = ["derive"] }

# Extensions.
treeldr-json-schema = { path = "../json-schema", version = "0.1", optional = true }
treeldr-json-ld-context = { path = "../json-ld-context", version = "0.1", optional = true }