[package]
name = "tldrc"
description = "Schema definition language."
version.workspace = true
authors.workspace = true
edition.workspace = true
default-run = "tldrc"

[features]
default = ["json-schema", "json-ld-context"]
json-schema = [
	"treeldr-json-schema",
	"treeldr-load/json-schema",
	"serde_json"
]
json-ld-context = [
	"treeldr-json-ld-context",
	"treeldr-load/json-ld-context"
]

[dependencies]
treeldr.workspace = true
treeldr-build.workspace = true
treeldr-syntax.workspace = true
treeldr-load.workspace = true
rdf-types.workspace = true
contextual.workspace = true
iref.workspace = true
grdf = { workspace = true, features = ["meta"] }
log.workspace = true
locspan.workspace = true
codespan-reporting.workspace = true
clap = { workspace = true, features = ["derive"] }
async-std = { workspace = true, features = ["attributes"] }
stderrlog = "0.5"

# Extensions.
treeldr-json-schema = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
treeldr-json-ld-context = { workspace = true, optional = true }

[[bin]]
name = "tldrc"
path = "src/main.rs"