[package]
name = "treeldr-vocab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iref = "2.1.1"
iref-enum = "2.0"
static-iref = "2.0"
locspan = { version = "0.3.2", features = ["reporting"] }
rdf-types = { version = "0.4.1", features = ["loc"] }