[package]
name = "treeldr-json-ld-context"
version = "0.1.0"
authors = ["Spruce Systems Inc."]
description = "Schema definition language."
edition = "2021"

[dependencies]
treeldr = { path = "../../core", version = "0.1" }
json-ld = "0.9.1-beta"
rdf-types = "0.12.3"
log = "0.4"
iref = "2.2"
static-iref = "2.0.0"
serde_json = "1.0"
clap = { version = "3.0", features = ["derive"] }
locspan = "0.7.11"
derivative = "2.2.0"
contextual = "0.1.3"
shelves = "1"
futures = "0.3.25"

[dev-dependencies]
treeldr-syntax = { path = "../../syntax", version = "0.1" }
treeldr-build = { path = "../../build", version = "0.1" }
async-std = { version = "1.12.0", features = ["attributes"] }