[package]
name = "treeldr-json-ld-context"
description = "TreeLDR JSON-LD context generation"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treeldr.workspace = true
rdf-types.workspace = true
log.workspace = true
iref.workspace = true
static-iref.workspace = true
clap = { workspace = true, features = ["derive"] }
locspan.workspace = true
derivative.workspace = true
contextual.workspace = true
shelves.workspace = true
json-ld.workspace = true
thiserror.workspace = true
futures = "0.3.25"

[dev-dependencies]
treeldr-syntax.workspace = true
treeldr-build.workspace = true
async-std = { workspace = true, features = ["attributes"] }