[package]
name = "treeldr-json-schema"
version = "0.1.0"
authors = ["Spruce Systems Inc."]
description = "Schema definition language."
edition = "2021"

[dependencies]
treeldr = { path = "../../core", version = "0.1" }
log = "0.4"
iref = "2.2"
serde_json = "1.0"
clap = { version = "3.0", features = ["derive"] }
derivative = "2.2.0"

# For the import function.
treeldr-build = { path = "../../build" }
locspan = "0.7"
rdf-types = { version = "0.9", features = ["meta"] }
xsd-types = "0.3.0"

[dev-dependencies]
static-iref = "2.0"
nquads-syntax = "0.6"
grdf = "0.11"