[package]
name = "treeldr-json-schema"
description = "TreeLDR JSON Schema generator"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treeldr.workspace = true
log.workspace = true
iref.workspace = true
clap = { workspace = true, features = ["derive"] }
derivative.workspace = true
json-syntax.workspace = true
thiserror.workspace = true

# For the import function.
treeldr-build.workspace = true
locspan.workspace = true
rdf-types = { workspace = true, features = ["meta"] }
xsd-types.workspace = true
contextual.workspace = true

[dev-dependencies]
treeldr-syntax.workspace = true
static-iref.workspace = true
nquads-syntax.workspace = true
grdf.workspace = true