[package]
name = "treeldr-lexicon"
description = "TreeLDR Lexicon support"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treeldr.workspace = true
log.workspace = true
iref.workspace = true
static-iref.workspace = true
contextual.workspace = true
clap = { workspace = true, features = ["derive"] }
derivative.workspace = true
thiserror.workspace = true
json-syntax = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"
rdf-types.workspace = true