[package]
name = "treeldr-gen-rust"
description = "TreeLDR Layouts to Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treeldr-layouts.workspace = true
rdf-types.workspace = true
iref.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
log.workspace = true
thiserror.workspace = true

clap = { workspace = true, features = ["derive"] }
stderrlog.workspace = true
serde_json.workspace = true