[package]
name = "treeldr-macros"
description = "TreeLDR macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
treeldr-layouts.workspace = true
treeldr-gen-rust.workspace = true
thiserror.workspace = true
rdf-types.workspace = true
iref.workspace = true
static-iref.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
proc-macro-error = "1.0.4"