[package]
name = "treeldr"
description = "TreeLDR interface with Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["derive"]
derive = ["treeldr-derive"]

[dependencies]
thiserror.workspace = true
educe.workspace = true
iref.workspace = true
langtag.workspace = true
rdf-types.workspace = true
grdf.workspace = true
treeldr-derive = { workspace = true, optional = true }