[package]
name = "treeldr-rust-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
treeldr.workspace = true
treeldr-load.workspace = true
treeldr-rust-gen.workspace = true
rdf-types.workspace = true
iref.workspace = true
thiserror.workspace = true
codespan-reporting.workspace = true
contextual.workspace = true
quote.workspace = true
proc-macro2.workspace = true
clap = { workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["full"] }
litrs = "0.2.3"
proc-macro-error = "1.0"
stderrlog = "0.5"

[dev-dependencies]
treeldr-rust-prelude.workspace = true