[package]
name = "treeldr-rust-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
treeldr = { path = "../../../core" }
treeldr-load = { path = "../../../load" }
treeldr-rust-gen = { path = "../gen" }
syn = { version = "1.0", features = ["full"] }
litrs = "0.2.3"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
iref = "2.1"
thiserror = "1.0.31"
codespan-reporting = "0.11"