[package]
name = "treeldr-rust-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
treeldr.workspace = true
treeldr-load.workspace = true
treeldr-rust-gen.workspace = true
rdf-types.workspace = true
iref.workspace = true
thiserror.workspace = true
codespan-reporting.workspace = true
contextual.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn = { version = "1.0", features = ["full"] }
litrs = "0.2.3"
proc-macro-error = "1.0"