[package]
name = "treeldr-rust-prelude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "json-ld" ]

[dependencies]
grdf = "0.14"
rdf-types = "0.12.3"
xsd-types = "0.3"
chrono = "0.4.19"
iref = "2.2"
static-iref = "2.0"
json-ld = { version = "0.9.1-beta", optional = true }