[package]
name = "treeldr-rust-prelude"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "json-ld" ]

[dependencies]
grdf.workspace = true
rdf-types.workspace = true
xsd-types.workspace = true
iref.workspace = true
static-iref.workspace = true
json-ld = { workspace = true, optional = true }
chrono.workspace = true