[package]
name = "treeldr-rust-prelude"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "json-ld" ]
json-ld = [ "dep:json-ld", "locspan" ]

[dependencies]
grdf.workspace = true
rdf-types.workspace = true
xsd-types.workspace = true
iref.workspace = true
static-iref.workspace = true
json-ld = { workspace = true, optional = true }
locspan = { workspace = true, optional = true }
chrono.workspace = true
contextual.workspace = true

# The `unicode-segmentation` features enables the `MinGrapheme` and
# `MaxGrapheme` string constraints.
unicode-segmentation = { version = "1.10.1", optional = true }